@@ -140,7 +140,7 @@ Degrees of freedom (for mstop = 45): 1.917234
 > names(cgc) <- NULL
 > names(cg) <- NULL
 > stopifnot(all.equal(cgc, cg))
-> stopifnot(all.equal(mstop(AIC(gc, "classical")), 
+> stopifnot(all.equal(mstop(AIC(gc, "classical")),
 +                     mstop(AIC(g, "classical"))))
 > 
 > ### fit ANCOVA models with centering
@@ -160,25 +160,25 @@ Degrees of freedom (for mstop = 45): 1.917234
 > 
 > for (cc in ctr) {
 +     modlm <- lm(fm, contrasts = cc)
-+     modT <- glmboost(fm, contrasts.arg = cc, 
++     modT <- glmboost(fm, contrasts.arg = cc,
 +                      center = TRUE)[mstop]
-+     stopifnot(max(abs(coef(modlm) - coef(modT, off2int = TRUE))) 
++     stopifnot(max(abs(coef(modlm) - coef(modT, off2int = TRUE)))
 +                       < .Machine$double.eps^(1/3))
 +     stopifnot(max(abs(hatvalues(modlm) - hatvalues(modT))) < 0.01)
-+     stopifnot(max(abs(predict(modlm) - predict(modT))) 
++     stopifnot(max(abs(predict(modlm) - predict(modT)))
 +                       < .Machine$double.eps^(1/3))
 + }
 > 
-> y <- factor(rbinom(length(x), size = 1, 
+> y <- factor(rbinom(length(x), size = 1,
 +                     prob = plogis(eff / max(abs(eff)) * 3)))
 > for (cc in ctr) {
-+     modlm <- glm(fm, contrasts = cc, 
++     modlm <- glm(fm, contrasts = cc,
 +                  family = binomial())
 +     modT <- glmboost(fm, contrasts.arg = cc,
 +         center = TRUE, family = Binomial())[mstop]
-+     stopifnot(max(abs(coef(modlm) - coef(modT, off2int = TRUE) * 2)) 
++     stopifnot(max(abs(coef(modlm) - coef(modT, off2int = TRUE) * 2))
 +                       < .Machine$double.eps^(1/3))
-+     stopifnot(max(abs(predict(modlm) - predict(modT) * 2)) 
++     stopifnot(max(abs(predict(modlm) - predict(modT) * 2))
 +                       < .Machine$double.eps^(1/3))
 + }
 > 
@@ -433,4 +433,9 @@ In asMethod(object) :
 > stopifnot(max(abs(cf1 - cf2)) < sqrt(.Machine$double.eps))
 > stopifnot(max(abs(cf1 - cf3)) < sqrt(.Machine$double.eps))
 > stopifnot(max(abs(predict(m2) - predict(m3))) < sqrt(.Machine$double.eps))
+> 
+> ### bug in setting contrasts correctly
+> z <- as.ordered(gl(3, 10))
+> BL <- bols(z, contrasts.arg = "contr.treatment")$dpp
+> stopifnot(attr(get("X", envir = environment(BL)), "contrasts")$z == "contr.treatment")
 > 
