@@ -21,11 +21,19 @@ Type 'q()' to quit R.
 
 	The following object(s) are masked from package:mboost :
 
-	 %+% %X% AdaExp bbs Binomial blackboost bols boost_control brandom bspatial btree CoxPH cv cvrisk ExpectReg Family FP gamboost GaussClass Gaussian GaussReg glmboost Huber IPCweights Laplace Loglog Lognormal mboost mboost_fit mstop NBinomial nuisance Poisson PropOdds QuantReg selected stabsel survFit Weibull 
+	 %+% %X% AdaExp bbs Binomial blackboost bns bols boost_control brandom bspatial bss btree CoxPH cv cvrisk ExpectReg Family FP gamboost GaussClass Gaussian GaussReg glmboost Huber IPCweights Laplace Loglog Lognormal mboost mboost_fit mstop NBinomial nuisance Poisson PropOdds QuantReg selected stabsel survFit Weibull 
 
 > library("MASS")
 > library("Matrix")
 Loading required package: lattice
+
+Attaching package: 'Matrix'
+
+
+	The following object(s) are masked from package:base :
+
+	 det 
+
 > 
 > set.seed(290875)
 > 
